<resources>
    <string name="app_name">CalculatorX</string>
    <string name="equals">=</string>
    <string name="C">C</string>
    <string name="del">DEL</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="multiplication">×</string>
    <string name="div1">÷</string>
    <string name="percent">%</string>
    <string name="parenthesis">( )</string>
    <string name="subtraction">-</string>
    <string name="plus_minus_sign">⁺∕₋</string>
    <string name="local_service_connected">localServiceConnected</string>
    <string name="local_service_disconnected">LocalServiceDisconnect</string>
</resources>